<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:paddingLeft="5dp" android:paddingRight="5dp"
	android:paddingTop="10dp" android:paddingBottom="5dp"
	android:stretchColumns="*">
	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:paddingLeft="8dp">
			<ImageView android:id="@+id/identity_provider_logo"
				android:paddingBottom="10dp" android:layout_width="wrap_content"
				android:layout_height="80dip" />
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:gravity="center_vertical" android:layout_height="wrap_content"
				android:paddingTop="10dp" android:paddingLeft="10dp">
				<TextView android:id="@+id/identity_provider_displayName"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:gravity="left" android:textSize="20dp" android:textStyle="bold"
					android:text="&lt;identity provider display name&gt;" />
				<TextView android:id="@+id/identity_provider_identifier"
					android:paddingTop="3dp" android:gravity="left" android:textSize="12dp"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:text="&lt;identity provider identifier&gt;" />
			</LinearLayout>
		</LinearLayout>
	</TableRow>

	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/identity_displayName_label"
				android:layout_width="120dp" android:layout_height="wrap_content"
				android:textStyle="bold" android:text="@string/full_name"
				android:paddingLeft="20dp" />
			<TextView android:id="@+id/identity_displayName"
				android:layout_width="fill_parent" android:gravity="right"
				android:layout_height="wrap_content" android:text="&lt;Full Name&gt;"
				android:paddingRight="20dp" />
		</LinearLayout>
	</TableRow>
	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/identity_identifier_label"
				android:layout_width="120dp" android:layout_height="wrap_content"
				android:textStyle="bold" android:text="@string/id" android:paddingLeft="20dp" />
			<TextView android:id="@+id/identity_identifier"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="right" android:text="&lt;ID&gt;"
				android:paddingRight="20dp" />
		</LinearLayout>
	</TableRow>
	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/identity_provider_infoURL_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textStyle="bold" android:text="@string/information"
				android:paddingLeft="20dp" />
			<TextView android:id="@+id/identity_provider_infoURL"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="&lt;Info URL&gt;"
				android:gravity="right" android:paddingRight="20dp" />
		</LinearLayout>
	</TableRow>

	<TableRow android:layout_height="fill_parent" android:layout_weight="1"
		android:layout_width="fill_parent" android:gravity="center_horizontal|bottom">
		<TextView android:id="@+id/identity_blocked_message"
			android:textColor="#9F9F9F" android:paddingBottom="10dp"
			android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:visibility="invisible" android:text="@string/identity_blocked_message" />
	</TableRow>

	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:gravity="center_horizontal|bottom">
		<Button android:id="@+id/delete_button" android:text="@string/delete_button"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</TableRow>
</TableLayout>