<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:gravity="bottom"
	android:layout_weight="3"
	android:paddingLeft="5dp" android:paddingRight="5dp"
	android:paddingTop="10dp" android:paddingBottom="5dp"
	android:stretchColumns="*">
	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="1">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_width="fill_parent"
				android:gravity="center" android:layout_height="wrap_content"
				android:text="@string/successfully_logged_in" android:textStyle="bold"
				android:textSize="16dp" android:id="@+id/title" />
		</LinearLayout>
	</TableRow>

	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_weight="1">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:gravity="center" android:layout_height="wrap_content"
				android:text="@string/loggedin_with_account" android:id="@+id/description"
				android:paddingBottom="10dp" />
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingLeft="8dp">
				<ImageView android:id="@+id/identity_provider_logo"
					android:layout_width="wrap_content"
					android:layout_height="80dip" />
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical" android:layout_width="fill_parent"
					android:paddingLeft="5dp" android:gravity="center_vertical" android:layout_height="wrap_content">
					<TextView android:layout_width="fill_parent"
						android:gravity="left" android:layout_height="wrap_content"
						android:textSize="20dp" android:id="@+id/display_name"
						android:textStyle="bold" android:text="&lt;identity display name&gt;" />
					<TextView android:id="@+id/identity_provider_name"
						android:paddingTop="3dp" android:gravity="left" android:textSize="12dp"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:text="&lt;identity provider display name&gt;" />
				</LinearLayout>
			</LinearLayout>
			<!-- <TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/identifier"
				android:gravity="center" android:textSize="12dp" android:text="&lt;identifier&gt;" /> -->
		</LinearLayout>
	</TableRow>

	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="2">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_width="fill_parent"
				android:gravity="center" android:layout_height="wrap_content"
				android:text="@string/to_service_provider" android:paddingBottom="10dp" />
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/service_provider_display_name"
				android:gravity="center" android:text="&lt;service provider name&gt;"
				android:textStyle="bold" android:textSize="18dp"/>
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/service_provider_identifier"
				android:gravity="center" android:textSize="12dp" android:text="&lt;service provider identifier&gt;" />
		</LinearLayout>
	</TableRow>

	<TableRow android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="0">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button android:text="@string/ok_button" android:id="@+id/confirm_button"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
	</TableRow>
</TableLayout>
<org.tiqr.authenticator.general.FooterView
		android:id="@+id/fallbackFooterView" android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>