<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:layout_centerHorizontal="true" android:orientation="vertical"
	android:id="@+id/pincode_layout">
	<org.tiqr.authenticator.general.ErrorView
		android:id="@+id/pincodeErrorView" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_centerHorizontal="true" android:orientation="vertical"
		android:paddingTop="1dip" android:paddingBottom="3dip"
		android:paddingLeft="20dip" android:paddingRight="20dip">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textColor="#CCCCCC"
			android:id="@+id/message" android:paddingTop="1dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/intro_label"
			android:text="@string/login_intro" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textColor="#CCCCCC"
			android:id="@+id/password_label" android:text="@string/password_label" />

		<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<EditText android:layout_width="1px" android:layout_height="1px"
				android:id="@+id/pinShadow" android:layout_x="0px" android:layout_y="0px"
				android:numeric="integer" android:maxLength="4" android:focusable="true" />
		</AbsoluteLayout>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1">
			<EditText android:id="@+id/pin1Field" android:layout_height="80px"
				android:layout_width="80px" android:layout_centerHorizontal="true"
				android:layout_gravity="center_horizontal" android:gravity="center"
				android:layout_weight="1" android:singleLine="true"
				android:clickable="false" android:cursorVisible="false"
				android:password="true" android:textSize="34px" />
			<EditText android:id="@+id/pin2Field" android:layout_height="80px"
				android:layout_width="80px" android:layout_centerHorizontal="true"
				android:layout_gravity="center_horizontal" android:gravity="center"
				android:layout_weight="1" android:singleLine="true"
				android:clickable="false" android:cursorVisible="false"
				android:textSize="34px" />
			<EditText android:id="@+id/pin3Field" android:layout_height="80px"
				android:layout_width="80px" android:layout_centerHorizontal="true"
				android:layout_gravity="center_horizontal" android:gravity="center"
				android:layout_weight="1" android:singleLine="true"
				android:clickable="false" android:cursorVisible="false"
				android:textSize="34px" />
			<EditText android:id="@+id/pin4Field" android:layout_height="80px"
				android:layout_width="80px" android:layout_centerHorizontal="true"
				android:layout_gravity="center_horizontal" android:gravity="center"
				android:layout_weight="1" android:singleLine="true"
				android:clickable="false" android:cursorVisible="false"
				android:textSize="34px" />

			<Button android:id="@+id/ok_button" android:layout_height="80px"
				android:layout_width="80px" android:layout_gravity="right"
				android:text="@string/ok_button" android:enabled="false"
				android:onClick="process" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>